syntax = "proto3";
package nbcontract.v1;

// Custom Linux Node OS Config
message CustomLinuxOSConfig {
    // The size in MB of a swap file that will be created on each node
    int32 swap_file_size = 1;
  
    // Valid values are "always", "defer", "defer+madvise", "madvise" and "never"
    string transparent_hugepage_support = 2;
  
    // Valid values are "always", "madvise" and "never"
    string transparent_defrag = 3;
  
    // Sysctl settings for Linux agent nodes
    SysctlConfig sysctl_config = 4;
  
    // Ulimit settings for Linux agent nodes
    UlimitConfig ulimit_config = 5;
  }

message SysctlConfig {
    int32 NetCoreSomaxconn = 1;
    int32 NetCoreNetdevMaxBacklog = 2;
    int32 NetCoreRmemDefault = 3;
    int32 NetCoreRmemMax = 4;
    int32 NetCoreWmemDefault = 5;
    int32 NetCoreWmemMax = 6;
    int32 NetCoreOptmemMax = 7;
    int32 NetIpv4TcpMaxSynBacklog = 8;
    int32 NetIpv4TcpMaxTwBuckets = 9;
    int32 NetIpv4TcpFinTimeout = 10;
    int32 NetIpv4TcpKeepaliveTime = 11;
    int32 NetIpv4TcpKeepaliveProbes = 12;
    int32 NetIpv4TcpkeepaliveIntvl = 13;
    bool NetIpv4TcpTwReuse = 14;
    string NetIpv4IpLocalPortRange = 15;
    int32 NetIpv4NeighDefaultGcThresh1 = 16;
    int32 NetIpv4NeighDefaultGcThresh2 = 17;
    int32 NetIpv4NeighDefaultGcThresh3 = 18;
    int32 NetNetfilterNfConntrackMax = 19;
    int32 NetNetfilterNfConntrackBuckets = 20;
    int32 FsInotifyMaxUserWatches = 21;
    int32 FsFileMax = 22;
    int32 FsAioMaxNr = 23;
    int32 FsNrOpen = 24;
    int32 KernelThreadsMax = 25;
    int32 VMMaxMapCount = 26;
    int32 VMSwappiness = 27;
    int32 VMVfsCachePressure = 28;
  }
  
  message UlimitConfig {
    string NoFile = 1;
    string MaxLockedMemory = 2; 
  }